Add deb-version.5 to po4a.cfg
Also update dpkg-man.pot and related .po files.

--- a/man/po/dpkg-man.pot
+++ b/man/po/dpkg-man.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2007-11-29 06:04+0200\n"
+"POT-Creation-Date: 2007-12-04 01:23+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -28,7 +28,7 @@ msgid "2007-01-24"
 msgstr ""
 
 # type: TH
-#: ../../man/822-date.1:2 ../../man/cleanup-info.8:1 ../../man/deb.5:1 ../../man/deb-control.5:3 ../../man/deb-old.5:1 ../../man/deb-override.5:16 ../../man/deb-shlibs.5:16 ../../man/deb-substvars.5:2 ../../man/dpkg.1:1 ../../man/dpkg-architecture.1:1 ../../man/dpkg.cfg.5:1 ../../man/dpkg-buildpackage.1:1 ../../man/dpkg-checkbuilddeps.1:1 ../../man/dpkg-distaddfile.1:1 ../../man/dpkg-deb.1:1 ../../man/dpkg-divert.8:1 ../../man/dpkg-genchanges.1:1 ../../man/dpkg-gencontrol.1:1 ../../man/dpkg-name.1:6 ../../man/dpkg-parsechangelog.1:1 ../../man/dpkg-query.1:1 ../../man/dpkg-scanpackages.1:16 ../../man/dpkg-scansources.1:1 ../../man/dpkg-shlibdeps.1:1 ../../man/dpkg-source.1:2 ../../man/dpkg-split.1:2 ../../man/dselect.1:1 ../../man/dselect.cfg.5:1 ../../man/install-info.8:5 ../../man/start-stop-daemon.8:1 ../../man/update-alternatives.8:8
+#: ../../man/822-date.1:2 ../../man/cleanup-info.8:1 ../../man/deb.5:1 ../../man/deb-control.5:3 ../../man/deb-version.5:5 ../../man/deb-old.5:1 ../../man/deb-override.5:16 ../../man/deb-shlibs.5:16 ../../man/deb-substvars.5:2 ../../man/dpkg.1:1 ../../man/dpkg-architecture.1:1 ../../man/dpkg.cfg.5:1 ../../man/dpkg-buildpackage.1:1 ../../man/dpkg-checkbuilddeps.1:1 ../../man/dpkg-distaddfile.1:1 ../../man/dpkg-deb.1:1 ../../man/dpkg-divert.8:1 ../../man/dpkg-genchanges.1:1 ../../man/dpkg-gencontrol.1:1 ../../man/dpkg-name.1:6 ../../man/dpkg-parsechangelog.1:1 ../../man/dpkg-query.1:1 ../../man/dpkg-scanpackages.1:16 ../../man/dpkg-scansources.1:1 ../../man/dpkg-shlibdeps.1:1 ../../man/dpkg-source.1:2 ../../man/dpkg-split.1:2 ../../man/dselect.1:1 ../../man/dselect.cfg.5:1 ../../man/install-info.8:5 ../../man/start-stop-daemon.8:1 ../../man/update-alternatives.8:8
 #, no-wrap
 msgid "Debian Project"
 msgstr ""
@@ -40,7 +40,7 @@ msgid "dpkg utilities"
 msgstr ""
 
 # type: SH
-#: ../../man/822-date.1:3 ../../man/cleanup-info.8:2 ../../man/deb.5:2 ../../man/deb-control.5:4 ../../man/deb-old.5:2 ../../man/deb-override.5:17 ../../man/deb-shlibs.5:17 ../../man/deb-substvars.5:3 ../../man/dpkg.1:2 ../../man/dpkg-architecture.1:2 ../../man/dpkg.cfg.5:2 ../../man/dpkg-buildpackage.1:2 ../../man/dpkg-checkbuilddeps.1:2 ../../man/dpkg-distaddfile.1:2 ../../man/dpkg-deb.1:2 ../../man/dpkg-divert.8:2 ../../man/dpkg-genchanges.1:2 ../../man/dpkg-gencontrol.1:2 ../../man/dpkg-name.1:7 ../../man/dpkg-parsechangelog.1:2 ../../man/dpkg-query.1:2 ../../man/dpkg-scanpackages.1:17 ../../man/dpkg-scansources.1:2 ../../man/dpkg-shlibdeps.1:2 ../../man/dpkg-source.1:3 ../../man/dpkg-split.1:3 ../../man/dpkg-statoverride.8:2 ../../man/dselect.1:2 ../../man/dselect.cfg.5:2 ../../man/install-info.8:6 ../../man/start-stop-daemon.8:2 ../../man/update-alternatives.8:9
+#: ../../man/822-date.1:3 ../../man/cleanup-info.8:2 ../../man/deb.5:2 ../../man/deb-control.5:4 ../../man/deb-version.5:6 ../../man/deb-old.5:2 ../../man/deb-override.5:17 ../../man/deb-shlibs.5:17 ../../man/deb-substvars.5:3 ../../man/dpkg.1:2 ../../man/dpkg-architecture.1:2 ../../man/dpkg.cfg.5:2 ../../man/dpkg-buildpackage.1:2 ../../man/dpkg-checkbuilddeps.1:2 ../../man/dpkg-distaddfile.1:2 ../../man/dpkg-deb.1:2 ../../man/dpkg-divert.8:2 ../../man/dpkg-genchanges.1:2 ../../man/dpkg-gencontrol.1:2 ../../man/dpkg-name.1:7 ../../man/dpkg-parsechangelog.1:2 ../../man/dpkg-query.1:2 ../../man/dpkg-scanpackages.1:17 ../../man/dpkg-scansources.1:2 ../../man/dpkg-shlibdeps.1:2 ../../man/dpkg-source.1:3 ../../man/dpkg-split.1:3 ../../man/dpkg-statoverride.8:2 ../../man/dselect.1:2 ../../man/dselect.cfg.5:2 ../../man/install-info.8:6 ../../man/start-stop-daemon.8:2 ../../man/update-alternatives.8:9
 #, no-wrap
 msgid "NAME"
 msgstr ""
@@ -51,7 +51,7 @@ msgid "822-date - Print date and time in RFC2822 format"
 msgstr ""
 
 # type: SH
-#: ../../man/822-date.1:6 ../../man/cleanup-info.8:5 ../../man/deb.5:4 ../../man/deb-control.5:7 ../../man/deb-old.5:5 ../../man/deb-override.5:20 ../../man/deb-shlibs.5:20 ../../man/deb-substvars.5:6 ../../man/dpkg.1:5 ../../man/dpkg-architecture.1:5 ../../man/dpkg-buildpackage.1:5 ../../man/dpkg-checkbuilddeps.1:5 ../../man/dpkg-distaddfile.1:5 ../../man/dpkg-deb.1:5 ../../man/dpkg-divert.8:5 ../../man/dpkg-genchanges.1:5 ../../man/dpkg-gencontrol.1:5 ../../man/dpkg-name.1:10 ../../man/dpkg-parsechangelog.1:5 ../../man/dpkg-query.1:5 ../../man/dpkg-scanpackages.1:20 ../../man/dpkg-scansources.1:5 ../../man/dpkg-shlibdeps.1:5 ../../man/dpkg-source.1:6 ../../man/dpkg-split.1:6 ../../man/dpkg-statoverride.8:5 ../../man/dselect.1:5 ../../man/install-info.8:9 ../../man/start-stop-daemon.8:5 ../../man/update-alternatives.8:12
+#: ../../man/822-date.1:6 ../../man/cleanup-info.8:5 ../../man/deb.5:4 ../../man/deb-control.5:7 ../../man/deb-version.5:9 ../../man/deb-old.5:5 ../../man/deb-override.5:20 ../../man/deb-shlibs.5:20 ../../man/deb-substvars.5:6 ../../man/dpkg.1:5 ../../man/dpkg-architecture.1:5 ../../man/dpkg-buildpackage.1:5 ../../man/dpkg-checkbuilddeps.1:5 ../../man/dpkg-distaddfile.1:5 ../../man/dpkg-deb.1:5 ../../man/dpkg-divert.8:5 ../../man/dpkg-genchanges.1:5 ../../man/dpkg-gencontrol.1:5 ../../man/dpkg-name.1:10 ../../man/dpkg-parsechangelog.1:5 ../../man/dpkg-query.1:5 ../../man/dpkg-scanpackages.1:20 ../../man/dpkg-scansources.1:5 ../../man/dpkg-shlibdeps.1:5 ../../man/dpkg-source.1:6 ../../man/dpkg-split.1:6 ../../man/dpkg-statoverride.8:5 ../../man/dselect.1:5 ../../man/install-info.8:9 ../../man/start-stop-daemon.8:5 ../../man/update-alternatives.8:12
 #, no-wrap
 msgid "SYNOPSIS"
 msgstr ""
@@ -62,7 +62,7 @@ msgid "B<822-date>"
 msgstr ""
 
 # type: SH
-#: ../../man/822-date.1:9 ../../man/cleanup-info.8:11 ../../man/deb.5:6 ../../man/deb-control.5:10 ../../man/deb-old.5:8 ../../man/deb-override.5:23 ../../man/deb-shlibs.5:23 ../../man/deb-substvars.5:9 ../../man/dpkg.1:19 ../../man/dpkg-architecture.1:11 ../../man/dpkg.cfg.5:5 ../../man/dpkg-buildpackage.1:9 ../../man/dpkg-checkbuilddeps.1:10 ../../man/dpkg-distaddfile.1:9 ../../man/dpkg-deb.1:10 ../../man/dpkg-divert.8:10 ../../man/dpkg-genchanges.1:10 ../../man/dpkg-gencontrol.1:9 ../../man/dpkg-name.1:16 ../../man/dpkg-parsechangelog.1:9 ../../man/dpkg-query.1:9 ../../man/dpkg-scanpackages.1:29 ../../man/dpkg-scansources.1:14 ../../man/dpkg-shlibdeps.1:11 ../../man/dpkg-source.1:11 ../../man/dpkg-split.1:11 ../../man/dpkg-statoverride.8:10 ../../man/dselect.1:18 ../../man/dselect.cfg.5:5 ../../man/install-info.8:25 ../../man/start-stop-daemon.8:10 ../../man/update-alternatives.8:17
+#: ../../man/822-date.1:9 ../../man/cleanup-info.8:11 ../../man/deb.5:6 ../../man/deb-control.5:10 ../../man/deb-version.5:11 ../../man/deb-old.5:8 ../../man/deb-override.5:23 ../../man/deb-shlibs.5:23 ../../man/deb-substvars.5:9 ../../man/dpkg.1:19 ../../man/dpkg-architecture.1:11 ../../man/dpkg.cfg.5:5 ../../man/dpkg-buildpackage.1:9 ../../man/dpkg-checkbuilddeps.1:10 ../../man/dpkg-distaddfile.1:9 ../../man/dpkg-deb.1:10 ../../man/dpkg-divert.8:10 ../../man/dpkg-genchanges.1:10 ../../man/dpkg-gencontrol.1:9 ../../man/dpkg-name.1:16 ../../man/dpkg-parsechangelog.1:9 ../../man/dpkg-query.1:9 ../../man/dpkg-scanpackages.1:29 ../../man/dpkg-scansources.1:14 ../../man/dpkg-shlibdeps.1:11 ../../man/dpkg-source.1:11 ../../man/dpkg-split.1:11 ../../man/dpkg-statoverride.8:10 ../../man/dselect.1:18 ../../man/dselect.cfg.5:5 ../../man/install-info.8:25 ../../man/start-stop-daemon.8:10 ../../man/update-alternatives.8:17
 #, no-wrap
 msgid "DESCRIPTION"
 msgstr ""
@@ -104,7 +104,7 @@ msgid "This facility really ought to be part of B<date>(1)."
 msgstr ""
 
 # type: SH
-#: ../../man/822-date.1:28 ../../man/cleanup-info.8:51 ../../man/deb.5:67 ../../man/deb-control.5:227 ../../man/deb-old.5:51 ../../man/deb-override.5:67 ../../man/deb-shlibs.5:29 ../../man/deb-substvars.5:129 ../../man/dpkg.1:608 ../../man/dpkg-architecture.1:268 ../../man/dpkg.cfg.5:21 ../../man/dpkg-buildpackage.1:204 ../../man/dpkg-deb.1:238 ../../man/dpkg-divert.8:118 ../../man/dpkg-name.1:98 ../../man/dpkg-query.1:157 ../../man/dpkg-scanpackages.1:100 ../../man/dpkg-scansources.1:65 ../../man/dpkg-shlibdeps.1:279 ../../man/dpkg-source.1:278 ../../man/dpkg-split.1:226 ../../man/dpkg-statoverride.8:78 ../../man/dselect.1:443 ../../man/dselect.cfg.5:21 ../../man/install-info.8:287 ../../man/update-alternatives.8:403
+#: ../../man/822-date.1:28 ../../man/cleanup-info.8:51 ../../man/deb.5:67 ../../man/deb-control.5:227 ../../man/deb-version.5:116 ../../man/deb-old.5:51 ../../man/deb-override.5:67 ../../man/deb-shlibs.5:29 ../../man/deb-substvars.5:129 ../../man/dpkg.1:608 ../../man/dpkg-architecture.1:268 ../../man/dpkg.cfg.5:21 ../../man/dpkg-buildpackage.1:204 ../../man/dpkg-deb.1:238 ../../man/dpkg-divert.8:118 ../../man/dpkg-name.1:98 ../../man/dpkg-query.1:157 ../../man/dpkg-scanpackages.1:100 ../../man/dpkg-scansources.1:65 ../../man/dpkg-shlibdeps.1:279 ../../man/dpkg-source.1:278 ../../man/dpkg-split.1:226 ../../man/dpkg-statoverride.8:78 ../../man/dselect.1:443 ../../man/dselect.cfg.5:21 ../../man/install-info.8:287 ../../man/update-alternatives.8:403
 #, no-wrap
 msgid "SEE ALSO"
 msgstr ""
@@ -257,7 +257,7 @@ msgid "Copyright (C) 1996 Kim-Minh Kaplan"
 msgstr ""
 
 # type: Plain text
-#: ../../man/cleanup-info.8:58 ../../man/deb-substvars.5:142 ../../man/dpkg-buildpackage.1:219 ../../man/dpkg-checkbuilddeps.1:35 ../../man/dpkg-distaddfile.1:53 ../../man/dpkg-deb.1:248 ../../man/dpkg-divert.8:125 ../../man/dpkg-genchanges.1:150 ../../man/dpkg-gencontrol.1:145 ../../man/dpkg-name.1:110 ../../man/dpkg-parsechangelog.1:54 ../../man/dpkg-query.1:156 ../../man/dpkg-shlibdeps.1:294 ../../man/dpkg-source.1:289 ../../man/dpkg-split.1:236 ../../man/dpkg-statoverride.8:85 ../../man/install-info.8:295 ../../man/update-alternatives.8:397
+#: ../../man/cleanup-info.8:58 ../../man/deb-version.5:126 ../../man/deb-substvars.5:142 ../../man/dpkg-buildpackage.1:219 ../../man/dpkg-checkbuilddeps.1:35 ../../man/dpkg-distaddfile.1:53 ../../man/dpkg-deb.1:248 ../../man/dpkg-divert.8:125 ../../man/dpkg-genchanges.1:150 ../../man/dpkg-gencontrol.1:145 ../../man/dpkg-name.1:110 ../../man/dpkg-parsechangelog.1:54 ../../man/dpkg-query.1:156 ../../man/dpkg-shlibdeps.1:294 ../../man/dpkg-source.1:289 ../../man/dpkg-split.1:236 ../../man/dpkg-statoverride.8:85 ../../man/install-info.8:295 ../../man/update-alternatives.8:397
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO WARRANTY."
@@ -276,7 +276,7 @@ msgid "2006-02-28"
 msgstr ""
 
 # type: TH
-#: ../../man/deb.5:1 ../../man/deb-control.5:3 ../../man/deb-old.5:1 ../../man/dselect.1:1
+#: ../../man/deb.5:1 ../../man/deb-control.5:3 ../../man/deb-version.5:5 ../../man/deb-old.5:1 ../../man/dselect.1:1
 #, no-wrap
 msgid "Debian"
 msgstr ""
@@ -444,9 +444,8 @@ msgstr ""
 msgid ""
 "Typically, this is the original package's version number in whatever form "
 "the program's author uses. It may also include a Debian revision number (for "
-"non-native packages). If both version and revision are supplied, they are "
-"separated by a hyphen, `-'. For this reason, the original version may not "
-"have a hyphen in its version number."
+"non-native packages). The exact format and sorting algorithm are described "
+"in B<deb-version>(5)."
 msgstr ""
 
 # type: TP
@@ -805,8 +804,229 @@ msgid ""
 msgstr ""
 
 # type: Plain text
-#: ../../man/deb-control.5:231
-msgid "B<deb>(5), B<debtags>(1), B<dpkg>(1), B<dpkg-deb>(1)."
+#: ../../man/deb-control.5:232
+msgid "B<deb>(5), B<deb-version>(5), B<debtags>(1), B<dpkg>(1), B<dpkg-deb>(1)."
+msgstr ""
+
+# type: TH
+#: ../../man/deb-version.5:5
+#, no-wrap
+msgid "deb-version"
+msgstr ""
+
+# type: TH
+#: ../../man/deb-version.5:5
+#, no-wrap
+msgid "2007-10-06"
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:8
+msgid "deb-version - Debian package version number format"
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:11
+msgid "[ I<epoch>:] I<upstream_version> [-I<debian_revision> ]"
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:14
+msgid ""
+"Version numbers as used for Debian binary and source packages consist of "
+"three components. These are:"
+msgstr ""
+
+# type: TP
+#: ../../man/deb-version.5:14
+#, no-wrap
+msgid "I<epoch>"
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:20
+msgid ""
+"This is a single (generally small) unsigned integer.  It may be omitted, in "
+"which case zero is assumed.  If it is omitted then the I<upstream_version> "
+"may not contain any colons."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:24
+msgid ""
+"It is provided to allow mistakes in the version numbers of older versions of "
+"a package, and also a package's previous version numbering schemes, to be "
+"left behind."
+msgstr ""
+
+# type: TP
+#: ../../man/deb-version.5:24
+#, no-wrap
+msgid "I<upstream_version>"
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:34
+msgid ""
+"This is the main part of the version number.  It is usually the version "
+"number of the original (\"upstream\")  package from which the I<.deb> file "
+"has been made, if this is applicable.  Usually this will be in the same "
+"format as that specified by the upstream author(s); however, it may need to "
+"be reformatted to fit into the package management system's format and "
+"comparison scheme."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:39
+msgid ""
+"The comparison behavior of the package management system with respect to the "
+"I<upstream_version> is described below.  The I<upstream_version> portion of "
+"the version number is mandatory."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:48
+msgid ""
+"The I<upstream_version> may contain only alphanumerics (\"A-Za-z0-9\") and "
+"the characters B<.> B<+> B<-> B<:> B<~> (full stop, plus, hyphen, colon, "
+"tilde) and should start with a digit.  If there is no I<debian_revision> "
+"then hyphens are not allowed; if there is no I<epoch> then colons are not "
+"allowed."
+msgstr ""
+
+# type: TP
+#: ../../man/deb-version.5:48
+#, no-wrap
+msgid "I<debian_revision>"
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:57
+msgid ""
+"This part of the version number specifies the version of the Debian package "
+"based on the upstream version.  It may contain only alphanumerics and the "
+"characters B<+> B<.> B<~> (plus, full stop, tilde) and is compared in the "
+"same way as the I<upstream_version> is."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:64
+msgid ""
+"It is optional; if it isn't present then the I<upstream_version> may not "
+"contain a hyphen.  This format represents the case where a piece of software "
+"was written specifically to be turned into a Debian package, and so there is "
+"only one \"debianisation\" of it and therefore no revision indication is "
+"required."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:68
+msgid ""
+"It is conventional to restart the I<debian_revision> at '1' each time time "
+"the I<upstream_version> is increased."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:76
+msgid ""
+"Dpkg will break the version number apart at the last hyphen in the string "
+"(if there is one) to determine the I<upstream_version> and "
+"I<debian_revision>.  The absence of a I<debian_revision> compares earlier "
+"than the presence of one (but note that the I<debian_revision> is the least "
+"significant part of the version number)."
+msgstr ""
+
+# type: SS
+#: ../../man/deb-version.5:76
+#, no-wrap
+msgid "Sorting Algorithm"
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:80
+msgid ""
+"The I<upstream_version> and I<debian_revision> parts are compared by the "
+"package management system using the same algorithm:"
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:82
+msgid "The strings are compared from left to right."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:92
+msgid ""
+"First the initial part of each string consisting entirely of non-digit "
+"characters is determined.  These two parts (one of which may be empty) are "
+"compared lexically.  If a difference is found it is returned.  The lexical "
+"comparison is a comparison of ASCII values modified so that all the letters "
+"sort earlier than all the non-letters and so that a tilde sorts before "
+"anything, even the end of a part.  For example, the following parts are in "
+"sorted order: '~~', '~~a', '~', the empty part, 'a'."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:100
+msgid ""
+"Then the initial part of the remainder of each string which consists "
+"entirely of digit characters is determined.  The numerical values of these "
+"two parts are compared, and any difference found is returned as the result "
+"of the comparison.  For these purposes an empty string (which can only occur "
+"at the end of one or both version strings being compared) counts as zero."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:104
+msgid ""
+"These two steps (comparing and removing initial non-digit strings and "
+"initial digit strings) are repeated until a difference is found or both "
+"strings are exhausted."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:112
+msgid ""
+"Note that the purpose of epochs is to allow us to leave behind mistakes in "
+"version numbering, and to cope with situations where the version numbering "
+"scheme changes.  It is B<not> intended to cope with version numbers "
+"containing strings of letters which the package management system cannot "
+"interpret (such as 'ALPHA' or 'pre-'), or with silly orderings."
+msgstr ""
+
+# type: SH
+#: ../../man/deb-version.5:112
+#, no-wrap
+msgid "CAVEATS"
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:116
+msgid ""
+"The tilde character and its special sorting properties were introduced in "
+"dpkg, version 1.10 and some parts of dpkg-dev only gained support for it "
+"later in the 1.10.x series."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:120
+msgid "B<deb-control>(5), B<deb>(5), B<dpkg>(1)"
+msgstr ""
+
+# type: SH
+#: ../../man/deb-version.5:120 ../../man/dpkg.1:621 ../../man/dpkg-buildpackage.1:211 ../../man/dpkg-distaddfile.1:47 ../../man/dpkg-genchanges.1:144 ../../man/dpkg-gencontrol.1:137 ../../man/dpkg-parsechangelog.1:48 ../../man/dpkg-shlibdeps.1:284 ../../man/dpkg-source.1:283 ../../man/dselect.1:449 ../../man/start-stop-daemon.8:242
+#, no-wrap
+msgid "AUTHORS"
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:122
+msgid "Copyright © 1996,1997,1998 Ian Jackson and Christian Schwarz."
+msgstr ""
+
+# type: Plain text
+#: ../../man/deb-version.5:124
+msgid "Copyright © 2007 Frank Lichtenheld"
 msgstr ""
 
 # type: TH
@@ -2641,12 +2861,6 @@ msgstr ""
 # type: Plain text
 #: ../../man/dpkg.1:620
 msgid "B<--no-act> usually gives less information than might be helpful."
-msgstr ""
-
-# type: SH
-#: ../../man/dpkg.1:621 ../../man/dpkg-buildpackage.1:211 ../../man/dpkg-distaddfile.1:47 ../../man/dpkg-genchanges.1:144 ../../man/dpkg-gencontrol.1:137 ../../man/dpkg-parsechangelog.1:48 ../../man/dpkg-shlibdeps.1:284 ../../man/dpkg-source.1:283 ../../man/dselect.1:449 ../../man/start-stop-daemon.8:242
-#, no-wrap
-msgid "AUTHORS"
 msgstr ""
 
 # type: Plain text
