scripts/Makefile.am: Add some missing test cases to EXTRA_DIST

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2007-12-04  Frank Lichtenheld  <djpig@debian.org>
 
+	* scripts/Makefile.am (EXTRA_DIST): Add
+	missing files from scripts/t/.
+
 	* debian/rules: Call dh_installchangelogs
 	and dh_installdocs for all packages instead
 	of only for dpkg.
