--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-04  Frank Lichtenheld  <djpig@debian.org>
 
+	* scripts/dpkg-source.pl: Move definition
+	of @comp_supported, %comp_supported, %comp_ext,
+	$comp_regex to...
+	* scripts/Dpkg.pm: ...here. Make them exportable
+	via the :compression tag.
+
 	* scripts/Dpkg/ErrorHandling.pm (usageerr):
 	Support format strings like all the other
 	error reporting functions.
