dpkg-genchanges: Handle source files not compressed with gzip correctly
Use comp_regex from Dpkg to correctly exlucde the .orig.tar even if it
is not compressed with gzip.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-12-04  Frank Lichtenheld  <djpig@debian.org>
 
+	* scripts/dpkg-genchanges.pl: Use comp_regex
+	from Dpkg to correctly exlucde the .orig.tar
+	even if it is not compressed with gzip.
+
 	* scripts/dpkg-source.pl: Move definition
 	of @comp_supported, %comp_supported, %comp_ext,
 	$comp_regex to...
