--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2007-12-04  Frank Lichtenheld  <djpig@debian.org>
 
+	* dpkg-deb/info.c (info_spew): Replace a
+	%ld with %lu to fix compiler warning.
+
 	* scripts/dpkg-genchanges.pl: Use comp_regex
 	from Dpkg to correctly exlucde the .orig.tar
 	even if it is not compressed with gzip.
