dpkg-genchanges: Allow different archs and types in debian/files
Support more than one arch and more than one type of a package
in debian/files. Parts of the patch by Goswin von Brederlow
and Bastian Blank.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-05  Frank Lichtenheld  <djpig@debian.org>
+	    Goswin von Brederlow  <brederlo@informatik.uni-tuebingen.de>
+	    Bastian Blank  <waldi@debian.org>
+
+	* scripts/dpkg-genchanges.pl: Support more
+	than one arch and more than one type of
+	a package in debian/files.
+
 2007-12-04  Frank Lichtenheld  <djpig@debian.org>
 
 	* dpkg-deb/info.c (info_spew): Replace a
