--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ dpkg (1.14.13) UNRELEASED; urgency=low
     and Bastian Blank. Closes: #356299, #377400, #229143
   * Allow building only architecture independent packages (-A).
     Closes: #109794, #200454
+  * Bump Standards-Version to 3.7.3 (no changes)
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
@@ -22,7 +23,7 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   [ Updated scripts translations ]
   * Swedish (Peter Karlsson)
 
- -- Frank Lichtenheld <djpig@debian.org>  Thu, 29 Nov 2007 23:04:33 +0100
+ -- Frank Lichtenheld <djpig@debian.org>  Wed, 05 Dec 2007 15:05:56 +0100
 
 dpkg (1.14.12) unstable; urgency=low
 
