French translation update for scripts

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   * Swedish (Peter Karlsson)
 
   [ Updated scripts translations ]
+  * French (Frédéric Bothamy).
   * Swedish (Peter Karlsson)
 
  -- Frank Lichtenheld <djpig@debian.org>  Wed, 05 Dec 2007 15:05:56 +0100
