--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-05  Frédéric Bothamy  <frederic.bothamy@free.fr>
+
+	* fr.po: Updated to 480t.
+
 2007-11-20  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 480t.
