--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-06  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/Dpkg/ErrorHandling.pm (report): export.
+
 2007-11-29  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/controllib.pl (parsecdata): Fix
