--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,18 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   * Fix control file parsing for field values starting with a colon.
     Apparently nobody ever needed this until Vcs-Cvs came along.
     Closes: #453364
+  * Copy the usr/share/doc directory to dpkg-dev and dselect (Instead
+    of using symlinks). The space requirements are minimal and adding
+    the needed dependencies to comply with policy would be way more
+    inconvenient. Pointed out by Rene Engelhard. Closes: #452730
+  * Allow more than one arch and more than one type of a package
+    in debian/files. Parts of the patch by Goswin von Brederlow
+    and Bastian Blank. Closes: #356299, #377400, #229143
+  * Allow building only architecture independent packages (-A).
+    Closes: #109794, #200454
+  * Bump Standards-Version to 3.7.3 (no changes)
+  * Make the -L option of dpkg-parsechangelog actually work (it's
+    only been eleven years...)
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
