--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,13 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   * Bump Standards-Version to 3.7.3 (no changes)
   * Make the -L option of dpkg-parsechangelog actually work (it's
     only been eleven years...)
+  * Import the code from my external Parse::DebianChangelog as
+    Dpkg::Changelog and Dpkg::Changelog::Debian. Using this
+    from parsechangelog/debian adds the following requested
+    features:
+     - Option to use a non-lossy format. Closes: #95579
+     - Various options to better control how many entries
+       should be displayed. Closes: #226932
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
@@ -25,7 +32,7 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   [ Updated scripts translations ]
   * Swedish (Peter Karlsson)
 
- -- Frank Lichtenheld <djpig@debian.org>  Thu, 29 Nov 2007 23:04:33 +0100
+ -- Frank Lichtenheld <djpig@debian.org>  Thu, 06 Dec 2007 04:27:17 +0100
 
 dpkg (1.14.12) unstable; urgency=low
 
