Dpkg::Shlibs::find_library() tries harder to return the canonical name
When it finds a library in a directory which is just a symlink to another
directory that is also considered, remember the other directory name as
the canonical one. And uses the new canonpath() to also simplify path
names containing "/../".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-12-08  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Shlibs.pm (find_library): When it finds a library
+	in a directory which is just a symlink to another directory that
+	is also considered, remember the other directory name as the
+	canonical one.
+	* scripts/Dpkg/Path.pm: Add new function canonpath() and
+	resolve_symlink().
+
 2007-12-05  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-buildpackage.pl: Add new
