Dpkg::Shlibs::SymbolFile supports meta-information fields
Meta-information fields are stored in symbols files on lines
starting with an asterisk. Added a corresponding non-regression
test. Updated deb-symbols(5) accordingly.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -4,6 +4,11 @@
 
 2007-12-09  Raphael Hertzog  <hertzog@debian.org>
 
+	* deb-symbols.5: Describe syntax of meta-information
+	fields and document the Build-Depends-Package field.
+
+2007-12-09  Raphael Hertzog  <hertzog@debian.org>
+
 	* dpkg-gensymbols.1: Remove the restriction that included files
 	must be valid symbol files on their own.
 
