--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,17 @@
 
 2007-12-09  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Shlibs/SymbolFile.pm: Parse and dump properly
+	new meta-information fields (on lines starting with an asterisk).
+	Bugfix with alternate dependency handling that were not properly
+	dumped.
+	* scripts/t/200_Dpkg_Shlibs.t,
+	scripts/t/200_Dpkg_Shlibs/symbols.fake-2: Add a test case to
+	verify that meta-information fields and alternate dependencies are
+	properly parsed and dumped.
+
+2007-12-09  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Shlibs/SymbolFile.pm (load): Pass the current
 	object as last parameter so that included files do not need to
 	repeat the header line.
