Dpkg::Shlibs::SymbolFile: included files don't need to repeat the header line
Adjust the parser to remember the current soname when processing an
included file so that it doesn't need to repeat (and duplicate!) a header
line. Update dpkg-gensymbols's manual page accordingly. And add a
non-regression test for this feature.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-12-09  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Shlibs/SymbolFile.pm (load): Pass the current
+	object as last parameter so that included files do not need to
+	repeat the header line.
+	* scripts/t/200_Dpkg_Shlibs/symbols.fake-1,
+	scripts/t/200_Dpkg_Shlibs/symbols.include-1: Adjust some tests
+	to also test inclusions with included files lacking a header line.
+
 2007-12-08  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-shlibdeps.pl: Doesn't warn any more about libm.so.6
