--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   * dpkg-shlibdeps doesn't warn any more about libm.so.6 being unused if the
     binary is also linked against libstdc++ since g++ always add an implicit
     -lm. Closes: #454616
+  * Included files in symbols files (via #include) do no more need to repeat
+    the header line. Closes: #455260
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
