--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-09  Raphael Hertzog  <hertzog@debian.org>
+
+	* dpkg-gensymbols.1: Remove the restriction that included files
+	must be valid symbol files on their own.
+
 2007-12-04  Frank Lichtenheld  <djpig@debian.org>
 
 	* po/po4a.cfg: Add deb-version.5.
