--- a/debian/changelog
+++ b/debian/changelog
@@ -31,8 +31,9 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   * Swedish (Peter Karlsson)
 
   [ Updated scripts translations ]
-  * French (Frédéric Bothamy).
+  * French (Frédéric Bothamy)
   * Swedish (Peter Karlsson)
+  * German (Helge Kreutzmann)
 
  -- Frank Lichtenheld <djpig@debian.org>  Wed, 05 Dec 2007 15:05:56 +0100
 
