--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-09  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 206t0f274u.
+
 2007-12-05  Frédéric Bothamy  <frederic.bothamy@free.fr>
 
 	* fr.po: Updated to 480t.
